kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devops-lab
  name: devops-k8s-lab
spec:
  selector:
    app: devops-k8s-lab
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
