kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-k8s-lab
  namespace: devops-lab
spec:
  ingressClassName: nginx
  rules:
    - host: devops-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-k8s-lab
                port:
                  number: 80
